overflow-wrap: break-word fix

--- a/frontend/src/blog/components/ViewBlog.css
+++ b/frontend/src/blog/components/ViewBlog.css
@@ -48,4 +48,5 @@ blockquote {
   letter-spacing: 0.009em;
   margin-bottom: 4em;
   padding: 1em;
+  overflow-wrap: break-word;
 };
